--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ header {
 
 .header-content {
 	padding-top: 150px;
-	padding-bottom: 200px;
+	padding-bottom: 250px;
 }
 
 .header__right {
@@ -175,7 +175,7 @@ header {
 	font-weight: 400;
 	color: #818181;
 	font-size: 18px;
-	margin-bottom: 80px;
+	margin-bottom: 37%;
 	transform: translate(0px, 120%);
 	opacity: 0;
 	transition: all 0.8s ease 0.4s;
@@ -676,4 +676,3 @@ li.active:hover {
 	.ii4 {
 		transition: all 1s ease 0.8s;
 	}
-
