--- a/style.css
+++ b/style.css
@@ -111,7 +111,9 @@ header {
 	min-height: 100%;
 	padding-top: 10px;
 	overflow: hidden;
-
+	/*display: flex;*/
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 .header__menu {
@@ -145,7 +147,7 @@ header {
 
 .header-content {
 	padding-top: 150px;
-	padding-bottom: 250px;
+	/*padding-bottom: 250px;*/
 }
 
 .header__right {
@@ -159,7 +161,7 @@ header {
 	font-weight: 500;
 	color: black;
 	font-size: 38px;
-	margin-bottom: 40px;
+	margin-bottom: 10%;
 	transform: translate(0px, 120%);
 	opacity: 0;
 	transition: all 0.8s ease 0s;
@@ -175,7 +177,7 @@ header {
 	font-weight: 400;
 	color: #818181;
 	font-size: 18px;
-	margin-bottom: 37%;
+	margin-bottom: 20%;
 	transform: translate(0px, 120%);
 	opacity: 0;
 	transition: all 0.8s ease 0.4s;
