--- a/style.css
+++ b/style.css
@@ -919,10 +919,18 @@ li.active:hover {
   transition: background-color 0.6s ease;
 }
 
-.slider .active, .dot:hover {
+.slider .active {
 	background-color: white;
 	transform: scale(2);
 	transition: background-color 0.6s ease;
+}
+
+.dot:hover {
+	transform: scale(1.5);
+}
+
+.active:hover {
+	transform: scale(2);
 }
 
 .fade {
@@ -968,4 +976,123 @@ li.active:hover {
 	.slider-page {
 		height: 300px;
 	}
+}
+
+.logos {
+	padding: 65px 0 65px 0;
+}
+
+.logos__row {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	position: relative;
+}
+
+.logos_item {
+	height: 10%;
+	width: 10%;
+}
+
+.need {
+	padding: 100px 0 100px 0;
+	background-color: #f5f5f5;
+	position: relative;
+}
+.need__container {
+	max-width: 680px;
+	text-align: center;
+	margin: 0 auto;
+	/*position: relative;*/
+}
+.need__title {
+	font-family: Montserrat;
+	font-weight: 500;
+	font-size: 30px;
+	margin-bottom: 40px;
+}
+.need__text {
+	font-family: Nunito Sans;
+	font-weight: 400;
+	font-size: 16px;
+	color: #787878;
+	margin-bottom: 40px;
+}
+
+.no-ckick-bg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.form {
+}
+.form__body {
+}
+.form__body::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(51,51,51,0.2) url("imgs/loading.gif") center / 50px no-repeat;
+	opacity: 0;
+	visibility: hidden;
+}
+.form__body._sending::after {
+	opacity: 1;
+	visibility: visible;
+	transition: all 0.5s ease 0s;
+}
+.first-forms {
+	display: flex;
+	justify-content: space-between;
+}
+.form__item {
+	margin-bottom: 30px;
+}
+.form__input {
+	width: 100%;
+	height: 50px;
+	padding: 0 20px;
+	border-radius: 5px;
+	font-family: 'Nunito', sans-serif;
+	font-weight: 400;
+	font-size: 15px;
+	color: #787878;
+	margin: 0;
+	border: none;
+	border: 0;
+	transition: all 0.5s ease 0s;
+	border: 1px inset #F0F0F0;
+}
+
+textarea.form__input {
+	min-height: 175px;
+	resize: vertical;
+	padding-top: 10px;
+}
+.first-forms .form__input {
+	width: 320px;
+}
+.button {
+}
+.form__button {
+	cursor: pointer;
+	border: none;
+}
+
+.form__input:focus {
+	box-shadow: 0 0 15px lightgrey;
+}
+
+.form__input._error {
+	box-shadow: 0 0 15px red;
+}
+
+.form * {
+	outline: none;
 }
