--- a/style.css
+++ b/style.css
@@ -453,6 +453,7 @@ li.active:hover {
 	height: 570px;
 	background-color: #e9e9e9;
 	background: url('imgs/brain.jpg') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
 }
 .blocks_content {
 	width: 500px;
@@ -615,41 +616,50 @@ li.active:hover {
 
 .i1 {
 	background: url('imgs/html.png') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
+	placeholder.jpg
 	transition: all 1s ease 0.8s;
 }
 
 .i2 {
 	background: url('imgs/css.svg') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
 	transition: all 1s ease 0.2s;
 }
 
 .i3 {
 	background: url('imgs/js.png') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
 	transition: all 1s ease 0.8s;
 }
 
 .i4 {
 	background: url('imgs/react.png') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
 	transition: all 1s ease 0.2s;
 }
 
 .i5 {
 	background: url('imgs/django.png') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
 	transition: all 1s ease 0.2s;
 }
 
 .i6 {
 	background: url('imgs/node.png') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
 	transition: all 1s ease 0.8s;
 }
 
 .i7 {
 	background: url('imgs/wp.png') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
 	transition: all 1s ease 0.2s;
 }
 
 .i8 {
 	background: url('imgs/php.png') no-repeat center center / cover;
+	background: url('imgs/placeholder.jpg') no-repeat center center / cover;
 	transition: all 1s ease 0.8s;
 }
 
@@ -929,7 +939,7 @@ li.active:hover {
 	transform: scale(1.5);
 }
 
-.active:hover {
+.dot.active:hover {
 	transform: scale(2);
 }
 
@@ -1050,6 +1060,7 @@ li.active:hover {
 .first-forms {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
 .form__item {
 	margin-bottom: 30px;
@@ -1066,7 +1077,7 @@ li.active:hover {
 	margin: 0;
 	border: none;
 	border: 0;
-	transition: all 0.5s ease 0s;
+	transition: all 0.2s ease 0s;
 	border: 1px inset #F0F0F0;
 }
 
@@ -1095,4 +1106,104 @@ textarea.form__input {
 
 .form * {
 	outline: none;
+}
+
+footer {
+	padding: 100px 0 100px 0;
+	background-color: #141414;
+	color: #bcbcbc;
+	font-family: Nunito Sans;
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 25px;
+}
+
+.footer__row {
+	display: flex;
+	flex-wrap: wrap;
+}
+.footer__left {
+	flex: 0 0 60%;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+.footer__left__item {
+	width: 200px; 
+}
+.footer__left__item__title {
+	font-family: Montserrat;
+	font-weight: 500;
+	font-size: 18px;
+	margin-bottom: 20px;
+	color: white;
+}
+.footer__left__item__text {
+}
+.footer__right {
+	flex: 0 0 40%;
+	display: flex;
+	justify-content: space-between;
+}
+.footer__right__list {
+	flex: 0 0 30%;
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+}
+.footer__right__list a, .footer__right__list li {
+	list-style: none;
+	text-decoration: none;
+	color: #bcbcbc;
+	transition: 0.2s;
+}
+
+.footer__right__list li {
+	margin-bottom: 5px;
+}
+
+
+.footer__right__list a:hover {
+	color: #a4a4a4;
+	transition: 0.2s;
+}
+
+@media (max-width: 700px) {
+	.footer__left {
+		flex: 0 0 100%;
+		text-align: center;
+		order: 2;
+	}
+	.footer__right {
+		flex: 0 0 100%;
+		text-align: center;
+		order: 1;
+		margin-bottom: 50px;
+	}
+	.footer__left__item {
+		flex: 0 0 50%;
+	}
+	.footer__right__list li {
+	margin-bottom: 10px;
+	}
+	footer {
+		padding: 50px 0 50px 0;
+	}
+	.first-forms {
+		justify-content: center;
+	}
+	.first-forms .form__item {
+		flex: 0 0 100%;
+		width: 100%;
+	}
+	.first-forms .form__input {
+		flex: 0 0 100%;
+		width: 100%;
+	}
+	.form__body {
+		padding: 0 20px;
+	}
+	.need__text {
+		padding: 0 20px;
+	}
 }
